--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "packageManager": "pnpm@10.15.0",
   "devDependencies": {
     "@types/node": "24.3.0",
-    "@types/react": "19.1.10",
+    "@types/react": "19.1.11",
     "@types/react-dom": "19.1.7",
     "autoprefixer": "10.4.21",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
@@ -26,8 +26,18 @@
     "@ai-sdk/openai": "2.0.19",
     "@ai-sdk/react": "2.0.22",
     "@ai-sdk/rsc": "1.0.22",
+    "@codemirror/commands": "6.8.1",
+    "@codemirror/lang-json": "6.0.2",
+    "@codemirror/lang-sql": "6.9.1",
+    "@codemirror/language": "6.11.3",
+    "@codemirror/lint": "6.8.5",
+    "@codemirror/state": "6.5.2",
+    "@codemirror/view": "6.38.1",
+    "@lezer/highlight": "^1.2.1",
     "@modelcontextprotocol/sdk": "1.17.4",
     "@reduxjs/toolkit": "2.8.2",
+    "@uiw/codemirror-themes": "4.25.1",
+    "@uiw/react-codemirror": "4.25.1",
     "ai": "5.0.22",
     "next": "15.5.0",
     "react": "19.1.1",
