--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,12 @@
       "@Hooks":         ["./src/hooks"],
       "@Pages/*":       ["./src/pages/*"],
       "@Pages":         ["./src/pages"],
+      "@Redux/*":       ["./src/redux/*"],
+      "@Redux":         ["./src/redux"],
       "@Styles/*":      ["./src/assets/styles/*"],
       "@Styles":        ["./src/assets/styles"],
+      "@Types/*":       ["./src/types/*"],
+      "@Types":         ["./src/types"],
       "@Utils/*":       ["./src/utils/*"],
       "@Utils":         ["./src/utils"]
     }
