--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "packageManager": "pnpm@10.15.0",
   "devDependencies": {
     "@types/node": "24.3.0",
-    "@types/react": "19.1.11",
+    "@types/react": "19.1.12",
     "@types/react-dom": "19.1.8",
     "autoprefixer": "10.4.21",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
@@ -33,7 +33,7 @@
     "@codemirror/lint": "6.8.5",
     "@codemirror/state": "6.5.2",
     "@codemirror/view": "6.38.1",
-    "@lezer/highlight": "^1.2.1",
+    "@lezer/highlight": "1.2.1",
     "@modelcontextprotocol/sdk": "1.17.4",
     "@reduxjs/toolkit": "2.8.2",
     "@uiw/codemirror-themes": "4.25.1",
@@ -42,10 +42,10 @@
     "next": "15.5.2",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "react-markdown": "^10.1.0",
+    "react-markdown": "10.1.0",
     "react-redux": "9.2.0",
-    "rehype-pretty-code": "^0.14.1",
-    "shiki": "^3.12.0"
+    "rehype-pretty-code": "0.14.1",
+    "shiki": "3.12.0"
   },
   "scripts": {
     "build": "NEXT_TELEMETRY_DISABLED=1 && pnpm noTel && next build",
