--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "devDependencies": {
     "@types/node": "24.3.0",
     "@types/react": "19.1.12",
-    "@types/react-dom": "19.1.8",
+    "@types/react-dom": "19.1.9",
     "autoprefixer": "10.4.21",
-    "babel-plugin-react-compiler": "19.1.0-rc.2",
+    "babel-plugin-react-compiler": "19.1.0-rc.3",
     "del-cli": "6.0.0",
     "postcss": "8.5.6",
     "postcss-custom-media": "11.0.6",
@@ -23,9 +23,9 @@
     "typescript": "5.9.2"
   },
   "dependencies": {
-    "@ai-sdk/openai": "2.0.22",
-    "@ai-sdk/react": "2.0.26",
-    "@ai-sdk/rsc": "1.0.26",
+    "@ai-sdk/openai": "2.0.23",
+    "@ai-sdk/react": "2.0.28",
+    "@ai-sdk/rsc": "1.0.28",
     "@codemirror/commands": "6.8.1",
     "@codemirror/lang-json": "6.0.2",
     "@codemirror/lang-sql": "6.9.1",
@@ -33,12 +33,15 @@
     "@codemirror/lint": "6.8.5",
     "@codemirror/state": "6.5.2",
     "@codemirror/view": "6.38.1",
+    "@floating-ui/react": "0.27.16",
+    "@headless-tree/core": "1.4.0",
+    "@headless-tree/react": "1.4.0",
     "@lezer/highlight": "1.2.1",
     "@modelcontextprotocol/sdk": "1.17.4",
     "@reduxjs/toolkit": "2.8.2",
     "@uiw/codemirror-themes": "4.25.1",
     "@uiw/react-codemirror": "4.25.1",
-    "ai": "5.0.26",
+    "ai": "5.0.28",
     "next": "15.5.2",
     "react": "19.1.1",
     "react-dom": "19.1.1",
