--- a/package.json
+++ b/package.json
@@ -39,16 +39,15 @@
     "@lezer/highlight": "1.2.1",
     "@modelcontextprotocol/sdk": "1.17.4",
     "@reduxjs/toolkit": "2.8.2",
+    "@tanstack/react-virtual": "3.13.12",
     "@uiw/codemirror-themes": "4.25.1",
     "@uiw/react-codemirror": "4.25.1",
-    "@virtuoso.dev/message-list": "1.13.3",
     "ai": "5.0.28",
     "next": "15.5.2",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-markdown": "10.1.0",
     "react-redux": "9.2.0",
-    "react-virtuoso": "4.14.0",
     "rehype-pretty-code": "0.14.1",
     "shiki": "3.12.0"
   },
