--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "type": "module",
   "engines": {
-    "node": "24.6.0"
+    "node": ">=24.0.0"
   },
   "packageManager": "pnpm@10.15.0",
   "devDependencies": {
-    "@types/node": "24.7.1",
+    "@types/node": "24.7.2",
     "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.1",
+    "@types/react-dom": "19.2.2",
     "autoprefixer": "10.4.21",
     "babel-plugin-react-compiler": "19.1.0-rc.3",
     "del-cli": "7.0.0",
@@ -23,27 +23,27 @@
     "typescript": "5.9.3"
   },
   "dependencies": {
-    "@ai-sdk/openai": "2.0.48",
-    "@ai-sdk/react": "2.0.68",
-    "@ai-sdk/rsc": "1.0.68",
+    "@ai-sdk/openai": "2.0.52",
+    "@ai-sdk/react": "2.0.70",
+    "@ai-sdk/rsc": "1.0.70",
     "@codemirror/commands": "6.9.0",
     "@codemirror/lang-json": "6.0.2",
     "@codemirror/lang-sql": "6.10.0",
     "@codemirror/language": "6.11.3",
     "@codemirror/lint": "6.9.0",
     "@codemirror/state": "6.5.2",
-    "@codemirror/view": "6.38.5",
+    "@codemirror/view": "6.38.6",
     "@floating-ui/react": "0.27.16",
-    "@headless-tree/core": "1.5.0",
-    "@headless-tree/react": "1.5.0",
+    "@headless-tree/core": "1.5.1",
+    "@headless-tree/react": "1.5.1",
     "@lezer/highlight": "1.2.1",
     "@modelcontextprotocol/sdk": "1.20.0",
     "@reduxjs/toolkit": "2.9.0",
     "@tanstack/react-virtual": "3.13.12",
     "@uiw/codemirror-themes": "4.25.2",
     "@uiw/react-codemirror": "4.25.2",
-    "ai": "5.0.68",
-    "next": "15.5.4",
+    "ai": "5.0.70",
+    "next": "15.5.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "10.1.0",
