--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "engines": {
     "node": ">=24.0.0"
   },
-  "packageManager": "pnpm@10.15.0",
+  "packageManager": "pnpm@10.18.3",
   "devDependencies": {
-    "@types/node": "24.7.2",
+    "@types/node": "24.8.1",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "autoprefixer": "10.4.21",
@@ -24,8 +24,8 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "2.0.52",
-    "@ai-sdk/react": "2.0.70",
-    "@ai-sdk/rsc": "1.0.70",
+    "@ai-sdk/react": "2.0.76",
+    "@ai-sdk/rsc": "1.0.76",
     "@codemirror/commands": "6.9.0",
     "@codemirror/lang-json": "6.0.2",
     "@codemirror/lang-sql": "6.10.0",
@@ -36,14 +36,15 @@
     "@floating-ui/react": "0.27.16",
     "@headless-tree/core": "1.5.1",
     "@headless-tree/react": "1.5.1",
-    "@lezer/highlight": "1.2.1",
-    "@modelcontextprotocol/sdk": "1.20.0",
-    "@reduxjs/toolkit": "2.9.0",
+    "@lezer/highlight": "1.2.2",
+    "@modelcontextprotocol/sdk": "1.20.1",
+    "@reduxjs/toolkit": "2.9.1",
     "@tanstack/react-virtual": "3.13.12",
     "@uiw/codemirror-themes": "4.25.2",
     "@uiw/react-codemirror": "4.25.2",
-    "ai": "5.0.70",
-    "next": "15.5.5",
+    "ai": "5.0.76",
+    "jose": "6.1.0",
+    "next": "16.0.0-beta.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "10.1.0",
