--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "engines": {
     "node": ">=24.0.0"
   },
-  "packageManager": "pnpm@10.18.3",
+  "packageManager": "pnpm@10.19.0",
   "devDependencies": {
     "@types/node": "24.9.1",
     "@types/react": "19.2.2",
@@ -24,27 +24,30 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "2.0.53",
-    "@ai-sdk/react": "2.0.76",
-    "@ai-sdk/rsc": "1.0.76",
-    "@codemirror/commands": "6.9.0",
+    "@ai-sdk/react": "2.0.78",
+    "@ai-sdk/rsc": "1.0.78",
+    "@codemirror/commands": "6.10.0",
     "@codemirror/lang-json": "6.0.2",
     "@codemirror/lang-sql": "6.10.0",
     "@codemirror/language": "6.11.3",
-    "@codemirror/lint": "6.9.0",
+    "@codemirror/lint": "6.9.1",
     "@codemirror/state": "6.5.2",
     "@codemirror/view": "6.38.6",
     "@floating-ui/react": "0.27.16",
     "@headless-tree/core": "1.5.1",
     "@headless-tree/react": "1.5.1",
     "@lezer/highlight": "1.2.2",
-    "@modelcontextprotocol/sdk": "1.20.1",
-    "@reduxjs/toolkit": "2.9.1",
+    "@modelcontextprotocol/sdk": "1.20.2",
+    "@reduxjs/toolkit": "2.9.2",
     "@tanstack/react-virtual": "3.13.12",
     "@uiw/codemirror-themes": "4.25.2",
     "@uiw/react-codemirror": "4.25.2",
-    "ai": "5.0.76",
+    "ai": "5.0.78",
+    "ajv": "8.17.1",
+    "ajv-errors": "3.0.0",
+    "ajv-formats": "3.0.1",
     "jose": "6.1.0",
-    "next": "16.0.0-beta.0",
+    "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "10.1.0",
