--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "2.0.64",
-    "@ai-sdk/react": "2.0.89",
-    "@ai-sdk/rsc": "1.0.89",
+    "@ai-sdk/react": "2.0.90",
+    "@ai-sdk/rsc": "1.0.91",
     "@codemirror/commands": "6.10.0",
     "@codemirror/lang-json": "6.0.2",
     "@codemirror/lang-sql": "6.10.0",
@@ -42,18 +42,19 @@
     "@tanstack/react-virtual": "3.13.12",
     "@uiw/codemirror-themes": "4.25.3",
     "@uiw/react-codemirror": "4.25.3",
-    "ai": "5.0.89",
+    "ai": "5.0.90",
     "ajv": "8.17.1",
     "ajv-errors": "3.0.0",
     "ajv-formats": "3.0.1",
-    "jose": "6.1.0",
+    "jose": "6.1.1",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "10.1.0",
     "react-redux": "9.2.0",
     "rehype-pretty-code": "0.14.1",
-    "shiki": "3.15.0"
+    "shiki": "3.15.0",
+    "uuid": "13.0.0"
   },
   "scripts": {
     "build": "NEXT_TELEMETRY_DISABLED=1 && pnpm noTel && next build",
