--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "engines": {
     "node": ">=24.0.0"
   },
-  "packageManager": "pnpm@10.19.0",
+  "packageManager": "pnpm@10.25.0",
   "devDependencies": {
-    "@types/node": "25.0.0",
+    "@types/node": "25.0.2",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "autoprefixer": "10.4.22",
     "babel-plugin-react-compiler": "19.1.0-rc.3",
     "del-cli": "7.0.0",
+    "pino-pretty": "13.1.3",
     "postcss": "8.5.6",
     "postcss-custom-media": "11.0.6",
     "postcss-import": "16.1.1",
@@ -23,36 +24,37 @@
     "typescript": "5.9.3"
   },
   "dependencies": {
-    "@ai-sdk/openai": "2.0.84",
-    "@ai-sdk/react": "2.0.114",
-    "@ai-sdk/rsc": "1.0.114",
+    "@ai-sdk/openai": "2.0.86",
+    "@ai-sdk/react": "2.0.115",
+    "@ai-sdk/rsc": "1.0.115",
     "@codemirror/commands": "6.10.0",
     "@codemirror/lang-json": "6.0.2",
     "@codemirror/lang-sql": "6.10.0",
     "@codemirror/language": "6.11.3",
     "@codemirror/lint": "6.9.2",
     "@codemirror/state": "6.5.2",
-    "@codemirror/view": "6.39.3",
+    "@codemirror/view": "6.39.4",
     "@floating-ui/react": "0.27.16",
     "@headless-tree/core": "1.6.0",
     "@headless-tree/react": "1.6.0",
     "@lezer/highlight": "1.2.3",
     "@modelcontextprotocol/sdk": "1.24.3",
     "@reduxjs/toolkit": "2.11.1",
-    "@uiw/codemirror-themes": "4.25.3",
-    "@uiw/react-codemirror": "4.25.3",
-    "ai": "5.0.112",
+    "@uiw/codemirror-themes": "4.25.4",
+    "@uiw/react-codemirror": "4.25.4",
+    "ai": "5.0.113",
     "ajv": "8.17.1",
     "ajv-errors": "3.0.0",
     "ajv-formats": "3.0.1",
     "jose": "6.1.3",
-    "next": "16.0.9",
-    "react": "19.2.2",
-    "react-dom": "19.2.2",
+    "next": "16.0.10",
+    "pino": "10.1.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-markdown": "10.1.0",
     "react-redux": "9.2.0",
     "rehype-pretty-code": "0.14.1",
-    "shiki": "3.19.0",
+    "shiki": "3.20.0",
     "uuid": "13.0.0"
   },
   "scripts": {
