feat(sql-editor): enable Vim keybindings with centralized configuration
- Add @replit/codemirror-vim dependency for CodeMirror 6 Vim support
- Enable Vim mode by default in SQLEditor component
- Add centralized vimConfig object for managing custom keybindings
- Map 'jk' chord to <Esc> in insert mode as default binding
- Preserve existing Tab and Mod-Enter custom keymaps via Prec.highest

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@lezer/highlight": "1.2.3",
     "@modelcontextprotocol/sdk": "1.24.3",
     "@reduxjs/toolkit": "2.11.2",
+    "@replit/codemirror-vim": "6.3.0",
     "@uiw/codemirror-themes": "4.25.4",
     "@uiw/react-codemirror": "4.25.4",
     "ai": "5.0.113",
